--- a/references.bib
+++ b/references.bib
@@ -20,6 +20,70 @@
   publisher={Nature Publishing Group}
 }
 
+@manual{complexheatmap2022,
+  title = {ComplexHeatmap: Making Complex Heatmaps},
+  author = {Gu, Zuguang and Eils, Roland and Schlesner, Matthias},
+  year = {2022},
+  note = {R package version 2.14.0},
+  url = {https://bioconductor.org/packages/ComplexHeatmap/}
+}
+
+@manual{dplyr2023,
+  title = {dplyr: A Grammar of Data Manipulation},
+  author = {Wickham, Hadley and François, Romain and Henry, Lionel and Müller, Kirill},
+  year = {2023},
+  note = {R package version 1.1.2},
+  url = {https://CRAN.R-project.org/package=dplyr}
+}
+
+@manual{ggplot22021,
+  title = {ggplot2: Elegant Graphics for Data Analysis},
+  author = {Wickham, Hadley},
+  year = {2021},
+  note = {R package version 3.4.2},
+  url = {https://CRAN.R-project.org/package=ggplot2}
+}
+
+@manual{knitr2023,
+  title = {knitr: A General-Purpose Package for Dynamic Report Generation in R},
+  author = {Xie, Yihui},
+  year = {2023},
+  note = {R package version 1.44},
+  url = {https://CRAN.R-project.org/package=knitr}
+}
+
+@manual{rcolorbrewer2023,
+  title = {RColorBrewer: ColorBrewer Palettes},
+  author = {Neuwirth, Erich},
+  year = {2023},
+  note = {R package version 1.1-3},
+  url = {https://CRAN.R-project.org/package=RColorBrewer}
+}
+
+@manual{rmarkdown2023,
+  title = {R Markdown: Dynamic Documents for R},
+  author = {Allaire, J.J. and Xie, Y. and McPherson, J. and Luraschi, J. and Ushey, K. and Atkins, A. and Wickham, H. and Cheng, J.},
+  year = {2023},
+  note = {R package version 2.24},
+  url = {https://CRAN.R-project.org/package=rmarkdown}
+}
+
+@manual{tidyr2023,
+  title = {tidyr: Tidy Messy Data},
+  author = {Wickham, Hadley and Girlich, Lionel},
+  year = {2023},
+  note = {R package version 1.3.1},
+  url = {https://CRAN.R-project.org/package=tidyr}
+}
+
+@manual{tibble2023,
+  title = {tibble: Simple Data Frames},
+  author = {Müller, Kirill and Wickham, Hadley},
+  year = {2023},
+  note = {R package version 3.3.0},
+  url = {https://CRAN.R-project.org/package=tibble}
+}
+
 @article{karlsson2013gpr126,
   title={GPR126 is essential for myelin sheath maintenance in mice and humans},
   author={Karlsson, Maria and others},
@@ -59,14 +123,6 @@
   pages={1184--1191},
   year={2009},
   publisher={Nature Publishing Group}
-}
-
-@Manual{kolde2019pheatmap,
-  title = {pheatmap: Pretty Heatmaps},
-  author = {Raivo Kolde},
-  year = {2019},
-  note = {R package version 1.0.12},
-  url = {https://CRAN.R-project.org/package=pheatmap},
 }
 
 @article{werder2023adgrg6,
